# rust-conv

./: .travis.yml  Cargo.toml  README.md  update-docs.py
doc/: search-index.js
doc/conv/: enum.DefaultApprox.html  enum.RoundToNearest.html  enum.RoundToNegInf.html  enum.RoundToPosInf.html  enum.RoundToZero.html  enum.Wrapping.html  index.html  macro.TryFrom!.html  sidebar-items.js  trait.ApproxFrom.html  trait.ApproxInto.html  trait.ApproxScheme.html  trait.ApproxWith.html  trait.ConvAsUtil.html  trait.ConvUtil.html  trait.Error.html  trait.TryFrom.html  trait.TryInto.html  trait.ValueFrom.html  trait.ValueInto.html
doc/conv/errors/: enum.FloatError.html  enum.GeneralError.html  enum.GeneralErrorKind.html  enum.NoError.html  enum.RangeError.html  enum.RangeErrorKind.html  index.html  sidebar-items.js  struct.NegOverflow.html  struct.Overflow.html  struct.PosOverflow.html  struct.Underflow.html  struct.Unrepresentable.html  trait.Saturate.html  trait.UnwrapOk.html  trait.UnwrapOrInf.html  trait.UnwrapOrInvalid.html  trait.UnwrapOrSaturate.html
doc/conv/impls/: index.html
doc/conv/impls/lang_char_to_int/: index.html
doc/conv/impls/lang_float_to_int/: index.html
doc/conv/impls/lang_floats/: index.html
doc/conv/impls/lang_int_to_char/: index.html
doc/conv/impls/lang_int_to_float/: index.html
doc/conv/impls/lang_ints/: index.html
doc/conv/macros/: index.html
doc/conv/misc/: index.html  trait.InvalidSentinel.html  trait.Saturated.html  trait.SignedInfinity.html
doc/conv/prelude/: index.html
doc/implementors/conv/: trait.ApproxFrom.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  (+1 more)
doc/src/conv/: errors.rs.html  impls.rs.html  lib.rs.html  macros.rs.html  misc.rs.html
scripts/: safe_float_to_int.rs  test-matrix.py
src/: errors.rs  impls.rs  lib.rs  macros.rs  misc.rs
tests/: conv_utils.rs  derive_try_from.rs  lang_char.rs  lang_floats.rs  lang_ints.rs  unwraps.rs
tests/util/: mod.rs
(+5 files in other folders)
