[package]
name = "conv"
version = "0.2.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "This crate provides a number of conversion traits with more specific semantics than those provided by 'as' or 'From'/'Into'."
repository = "https://github.com/DanielKeep/rust-conv"
documentation = "https://danielkeep.github.io/rust-conv/doc/conv/index.html"
readme = "README.md"
license = "MIT"
keywords = ["from", "into", "conversion", "approximation"]

exclude = ["update-docs.py"]

[dependencies]
custom_derive = "0.1.2"

[dev-dependencies]
quickcheck = "0.2.21"
